--- a/style.css
+++ b/style.css
@@ -241,6 +241,11 @@
     .resume {
       flex-direction: column;
       width: 90vw;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 10px;
+      border-bottom-left-radius: 10px;
+
     }
 
     .left {
