--- a/style.css
+++ b/style.css
@@ -217,7 +217,11 @@
     cursor: pointer;
     transition: 0.5s;
   }
-
+  
+  a{
+    text-decoration: none;
+    color: white;
+  }
   .mode-select button:first-child {
     border-top-left-radius: 10px;
   }
